@@ -1,6 +1,10 @@
+2003-2-19  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/web/monitor.py: Monitor web sites.
+
 2003-2-20  Paul Swartz  <z3p@twistedmatrix.com>
 
-	( twisted/internet/{app,default,interface,unix}.py: Add 'mode' argument
+	* twisted/internet/{app,default,interface,unix}.py: Add 'mode' argument
 	to the listenUNIX interface, which sets the filesystem mode for the
         socket.
 
